fixed a layout bug

--- a/public/style.css
+++ b/public/style.css
@@ -102,7 +102,7 @@ input, button, textarea {
     color: white;
 }
 
-.grid-item img {
+.grid-item>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
